@@ -280,6 +280,10 @@ project(ACE) : acedefaults, aceversion, core, qt_moc, qt_reactor {
       Codecs.cpp
     }
 
+    UUID {
+      UUID.cpp
+    }
+
     Other {
       Local_Name_Space.cpp
       Name_Proxy.cpp
@@ -289,6 +293,10 @@ project(ACE) : acedefaults, aceversion, core, qt_moc, qt_reactor {
       Registry_Name_Space.cpp
       Remote_Name_Space.cpp
       NT_Service.cpp
+    }
+
+    Metrics {
+      Metrics_Cache.cpp
     }
   }
 
